--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<h2>Vlad</h2>
-<p>Test</p>
+<head>
+  <title>HTML Backgorund Color</title>
+</head>
+<body style="background-color:grey;">
+  <h1>Products</h1>
+  <p>We have developed more than 10 products till now.</p>
+</body>
