--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Vlad</title>
+</head>
 <body style="background-color:FloralWhite;">
-   <h1>Vlad</h1>
-   <p>test</p>
+   <h1>Test</h1>
+   <p>Test</p>
 </body>
+</html>
